--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -130,4 +130,13 @@
   <data name="highlightbox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\highlightbox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Lowercase Letters" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\PresetCharacterPalettes\Lowercase Letters.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="Main ASCII Characters" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\PresetCharacterPalettes\Main ASCII Characters.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="Uppercase Letters" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\PresetCharacterPalettes\Uppercase Letters.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
