--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -133,4 +133,19 @@
   <data name="SelectToolIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SelectToolIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DestroyLayerIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DestroyLayerIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DuplicateLayerIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DuplicateLayerIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MoveLayerDownIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MoveLayerDownIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MoveLayerUpIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MoveLayerUpIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NewLayerIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NewLayerIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
