About Window + More WIP on Languages

--- a/Resources/Languages/Dutch.json
+++ b/Resources/Languages/Dutch.json
@@ -35,7 +35,7 @@
   "CanvasIncreaseTextSize": "Vergroot tekst",
   "CanvasDecreaseTextSize": "Verklein tekst",
   "CanvasResetTextSize": "Stel tekstgrootte opnieuw in",
-  "CanvasHighlightThickness": "Markeer dikte",
+  "CanvasHighlightThickness": "Markeer dikte: {0}",
   "CanvasIncreaseHighlightThickness": "Verdik markeer dikte",
   "CanvasDecreaseHighlightThickness": "Verdun markeer dikte",
   "CanvasResetHighlightThickness": "Stel markeer dikte opnieuw in",
@@ -45,7 +45,7 @@
   "NoFilters": "Geen filters!",
   "DrawMenu": "Tekenen",
   "FillSelection": "Vul selectie",
-  "Create": "Creëer",
+  "Create": "CreÃ«er",
   "Edit": "Bewerk",
   "ASCIIArt": "ASCII Kunst",
   "Size": "Grootte",
@@ -90,13 +90,21 @@
   "Tool_EightDirectional": "Acht directioneel",
   "File_ExportFailedMessage": "Kunst bestand exporteren mislukt! Uitzonderingsbericht: {0}",
   "File_ExportBusy": "Aan het exporteren naar {0}...",
-  "File_ExportSuccessMessage": "Kunst bestand geëxporteerd naar {0}! Open bestand?",
+  "File_ExportSuccessMessage": "Kunst bestand geÃ«xporteerd naar {0}! Open bestand?",
   "File_SaveFailedMessage": "Kunst bestand bewaren mislukt! Uitzonderingsbericht: {0}",
   "File_SaveBusy": "Aan het bewaren op {0}...",
   "File_SaveSuccessMessage": "Kunst bestand bewaard op {0}!",
-  "File_LargeFileWarningMessage": "De bestand die je probeert te creëeren/bewerken/openen heeft een canvas oppervlakte van {0} tekens. Dit is boven de aanbeloven oppervlakte limiet van {0} tekens.\\nDit bestand kan lang duren om geladen en bewaard te worden, en kan zeer zwaar zijn op prestatie.\\n Ben je zeker dat je wilt verdergaan?",
+  "File_LargeFileWarningMessage": "De bestand die je probeert te creÃ«eren/bewerken/openen heeft een canvas oppervlakte van {0} tekens. Dit is boven de aanbeloven oppervlakte limiet van {1} tekens.\\nDit bestand kan lang duren om geladen en bewaard te worden, en kan zeer zwaar zijn op prestatie.\\n Ben je zeker dat je wilt verdergaan?",
   "File_TooLargeMessage": "Canvas oppervlakte is te groot! Max: {0} tekens ({1} tekens)",
   "File_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen aanwezig in dit bestand.\\nWilt je eerst bewaren?",
   "Application_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen.\\nBen je zeker dat je wilt afsluiten? (Alle wijzingen worden weggegooid)",
-  "BackgroundTaskBusyMessage": "Huidige achtergrond taak moet eerst gevoltooid zijn om deze actie uit te voeren."
+  "BackgroundTaskBusyMessage": "Huidige achtergrond taak moet eerst gevoltooid zijn om deze actie uit te voeren.",
+  "About": "Over",
+  "Credits": "Credits",
+  "Credits_Translation": "Kiara, het Polyglot project, Google Translate",
+  "Credits_Section_Translation": "Translatie",
+  "Credits_DevelopedBy": "Kiara (Youtube, @kygira5_dev)",
+  "Credits_Section_DevelopedBy": "Ontwikkeld door",
+  "Credits_Testers": "Geen testers",
+  "Credits_Section_Testers": "Testers"
 }
