--- a/Resources/Languages/English.json
+++ b/Resources/Languages/English.json
@@ -1,104 +1,110 @@
 {
-  "translationDictionary": {
-    "LanguageName": "English",
-    "FileMenu": "File",
-    "NewFile": "New",
-    "OpenFile": "Open",
-    "SaveFile": "Save",
-    "SaveAsFile": "Save as",
-    "ImportFile": "Import",
-    "ExportFile": "Export",
-    "EditFile": "Edit file",
-    "CopyClipboardArt": "Copy art to clipboard",
-    "ImportLayer": "Import as new layer",
-    "Settings": "Settings",
-    "Exit": "Exit",
-    "EditMenu": "Edit",
-    "Undo": "Undo",
-    "Redo": "Redo",
-    "CutSelection": "Cut selection",
-    "CopySelection": "Copy selection",
-    "PasteLayer": "Paste as new layer",
-    "DeleteSelection": "Delete selection",
-    "SelectCanvas": "Select canvas",
-    "SelectLayer": "Select layer",
-    "CancelSelection": "Cancel selection",
-    "CropCanvas": "Crop canvas",
-    "CropLayer": "Crop layer",
-    "FitLayersInCanvas": "Crop all layers to fit within canvas",
-    "FitLayersInCanvas_WarningMessage": "This action can remove layers.\\nAre you sure?",
-    "ViewMenu": "View",
-    "DarkMode": "Dark mode",
-    "Visible": "Visible",
-    "Toolbox": "Toolbox",
-    "Canvas": "Canvas",
-    "CanvasTextSize": "Text size: {0}",
-    "CanvasIncreaseTextSize": "Enlarge text size",
-    "CanvasDecreaseTextSize": "Shrink text size",
-    "CanvasResetTextSize": "Reset text size",
-    "CanvasHighlightThickness": "Highlight thickness: {0}",
-    "CanvasIncreaseHighlightThickness": "Increase highlight thickness",
-    "CanvasDecreaseHighlightThickness": "Decrease highlight thickness",
-    "CanvasResetHighlightThickness": "Reset highlight thickness",
-    "CanvasGridVisibility": "Show grid",
-    "LayerManagement": "Layer Management",
-    "FiltersMenu": "Filters",
-    "NoFilters": "No filters!",
-    "DrawMenu": "Draw",
-    "FillSelection": "Fill selection",
-    "Create": "Create",
-    "Edit": "Edit",
-    "ASCIIArt": "ASCII Art",
-    "Size": "Size",
-    "InvalidSizeMessage": "Width & height must be above 0 and natural numbers!",
-    "ImageASCIIArtExportOptions": "Image ASCII Art Export Options",
-    "TextSize": "Text Size",
-    "Colors": "Colors",
-    "BackgroundColor": "Background",
-    "TextColor": "Text",
-    "InvalidImageExportTextSizeMessage": "Invalid text size! Text size must be between 1 and 256.",
-    "ColorPicker": "Color Picker",
-    "HexColor": "Hex",
-    "InvalidHexColorMessage": "Invalid hex color!",
-    "InvalidColorMessage": "Invalid color!",
-    "ImageASCIIArtImportOptions": "Image ASCII Art Import Options",
-    "InvertBrightness": "Invert brightness",
-    "Scale": "Scale",
-    "Settings_Language": "Language",
-    "Settings_UserInterface": "User interface",
-    "Settings_CanvasFont": "Canvas font",
-    "Settings_Files": "Files",
-    "Settings_AutosaveFiles": "Autosave files",
-    "Settings_AutosaveInterval": "Save every {0} minutes",
-    "Settings_OpenAutosavesFolder": "Open autosaves folder",
-    "Settings_Apply": "Apply changes",
-    "Settings_Reset": "Reset all",
-    "Settings_InvalidAutosaveIntervalMessage": "Invalid autosave interval! Time interval must be larger than 0 and less than 120 minutes and have no decimal points.",
-    "Palette": "Palette",
-    "Name": "Name",
-    "Palette_Characters": "Characters",
-    "Palette_InvalidCharacterMessage": "Palette contains invalid character: {0}",
-    "Palette_InvalidNameMessage": "Invalid name! Palette name can not be empty or only whitespace!",
-    "Palette_RemoveMessage": "Are you sure you want to remove palette {0}?\\nThis can not be undone.",
-    "Palette_AlreadyExistsMessage": "Palette {0} already exists!",
-    "Palette_EditPresetPaletteMessage": "Can not edit preset palettes.",
-    "Palette_RemovePresetPaletteMessage": "Can not remove preset palettes.",
-    "LayerOptions": "Layer Options",
-    "Tool_NoLayerSelectedCaption": "No layer selected",
-    "Tool_NoLayerSelectedMessage": "Please select a layer!",
-    "Tool_Size": "Size",
-    "Tool_StayInsideSelection": "Stay inside selection",
-    "Tool_EightDirectional": "Eight directional",
-    "File_ExportFailedMessage": "Failed to export art file! Exception message: {0}",
-    "File_ExportBusy": "Exporting to {0}...",
-    "File_ExportSuccessMessage": "Exported art file to {0}! Open file?",
-    "File_SaveFailedMessage": "Failed to save art file! Exception message: {0}",
-    "File_SaveBusy": "Saving {0}...",
-    "File_SaveSuccessMessage": "Saved art file to {0}!",
-    "File_LargeFileWarningMessage": "The file you're trying to create/edit/open has a canvas area of {0} characters. This is above the recommended area limit of {1} characters.\\nThis file might take a long time to load and save, and can be performance heavy.\\nAre you sure you want to continue?",
-    "File_TooLargeMessage": "Canvas area is too large! Max: {0} characters ({1} characters}",
-    "File_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\\nWould you like to save?",
-    "Application_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\\nAre you sure want to exit? (All changes will be discarded)",
-    "BackgroundTaskBusyMessage": "Current background task must finish in order to perform this action."
-  }
+  "LanguageName": "English",
+  "FileMenu": "File",
+  "NewFile": "New",
+  "OpenFile": "Open",
+  "SaveFile": "Save",
+  "SaveAsFile": "Save as",
+  "ImportFile": "Import",
+  "ExportFile": "Export",
+  "EditFile": "Edit file",
+  "CopyClipboardArt": "Copy art to clipboard",
+  "ImportLayer": "Import as new layer",
+  "Settings": "Settings",
+  "Exit": "Exit",
+  "EditMenu": "Edit",
+  "Undo": "Undo",
+  "Redo": "Redo",
+  "CutSelection": "Cut selection",
+  "CopySelection": "Copy selection",
+  "PasteLayer": "Paste as new layer",
+  "DeleteSelection": "Delete selection",
+  "SelectCanvas": "Select canvas",
+  "SelectLayer": "Select layer",
+  "CancelSelection": "Cancel selection",
+  "CropCanvas": "Crop canvas",
+  "CropLayer": "Crop layer",
+  "FitLayersInCanvas": "Crop all layers to fit within canvas",
+  "FitLayersInCanvas_WarningMessage": "This action can remove layers.\\nAre you sure?",
+  "ViewMenu": "View",
+  "DarkMode": "Dark mode",
+  "Visible": "Visible",
+  "Toolbox": "Toolbox",
+  "Canvas": "Canvas",
+  "CanvasTextSize": "Text size: {0}",
+  "CanvasIncreaseTextSize": "Enlarge text size",
+  "CanvasDecreaseTextSize": "Shrink text size",
+  "CanvasResetTextSize": "Reset text size",
+  "CanvasHighlightThickness": "Highlight thickness: {0}",
+  "CanvasIncreaseHighlightThickness": "Increase highlight thickness",
+  "CanvasDecreaseHighlightThickness": "Decrease highlight thickness",
+  "CanvasResetHighlightThickness": "Reset highlight thickness",
+  "CanvasGridVisibility": "Show grid",
+  "LayerManagement": "Layer Management",
+  "FiltersMenu": "Filters",
+  "NoFilters": "No filters!",
+  "DrawMenu": "Draw",
+  "FillSelection": "Fill selection",
+  "Create": "Create",
+  "Edit": "Edit",
+  "ASCIIArt": "ASCII Art",
+  "Size": "Size",
+  "InvalidSizeMessage": "Width & height must be above 0 and natural numbers!",
+  "ImageASCIIArtExportOptions": "Image ASCII Art Export Options",
+  "TextSize": "Text Size",
+  "Colors": "Colors",
+  "BackgroundColor": "Background",
+  "TextColor": "Text",
+  "InvalidImageExportTextSizeMessage": "Invalid text size! Text size must be between 1 and 256.",
+  "ColorPicker": "Color Picker",
+  "HexColor": "Hex",
+  "InvalidHexColorMessage": "Invalid hex color!",
+  "InvalidColorMessage": "Invalid color!",
+  "ImageASCIIArtImportOptions": "Image ASCII Art Import Options",
+  "InvertBrightness": "Invert brightness",
+  "Scale": "Scale",
+  "Settings_Language": "Language",
+  "Settings_UserInterface": "User interface",
+  "Settings_CanvasFont": "Canvas font",
+  "Settings_Files": "Files",
+  "Settings_AutosaveFiles": "Autosave files",
+  "Settings_AutosaveInterval": "Save every {0} minutes",
+  "Settings_OpenAutosavesFolder": "Open autosaves folder",
+  "Settings_Apply": "Apply changes",
+  "Settings_Reset": "Reset all",
+  "Settings_InvalidAutosaveIntervalMessage": "Invalid autosave interval! Time interval must be larger than 0 and less than 120 minutes and have no decimal points.",
+  "Palette": "Palette",
+  "Name": "Name",
+  "Palette_Characters": "Characters",
+  "Palette_InvalidCharacterMessage": "Palette contains invalid character: {0}",
+  "Palette_InvalidNameMessage": "Invalid name! Palette name can not be empty or only whitespace!",
+  "Palette_RemoveMessage": "Are you sure you want to remove palette {0}?\\nThis can not be undone.",
+  "Palette_AlreadyExistsMessage": "Palette {0} already exists!",
+  "Palette_EditPresetPaletteMessage": "Can not edit preset palettes.",
+  "Palette_RemovePresetPaletteMessage": "Can not remove preset palettes.",
+  "LayerOptions": "Layer Options",
+  "Tool_NoLayerSelectedCaption": "No layer selected",
+  "Tool_NoLayerSelectedMessage": "Please select a layer!",
+  "Tool_Size": "Size",
+  "Tool_StayInsideSelection": "Stay inside selection",
+  "Tool_EightDirectional": "Eight directional",
+  "File_ExportFailedMessage": "Failed to export art file! Exception message: {0}",
+  "File_ExportBusy": "Exporting to {0}...",
+  "File_ExportSuccessMessage": "Exported art file to {0}! Open file?",
+  "File_SaveFailedMessage": "Failed to save art file! Exception message: {0}",
+  "File_SaveBusy": "Saving {0}...",
+  "File_SaveSuccessMessage": "Saved art file to {0}!",
+  "File_LargeFileWarningMessage": "The file you're trying to create/edit/open has a canvas area of {0} characters. This is above the recommended area limit of {1} characters.\\nThis file might take a long time to load and save, and can be performance heavy.\\nAre you sure you want to continue?",
+  "File_TooLargeMessage": "Canvas area is too large! Max: {0} characters ({1} characters}",
+  "File_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\\nWould you like to save?",
+  "Application_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\\nAre you sure want to exit? (All changes will be discarded)",
+  "BackgroundTaskBusyMessage": "Current background task must finish in order to perform this action.",
+  "About": "About",
+  "Credits": "Credits",
+  "Credits_Translation": "Kiara, the Polyglot Project, Google Translate",
+  "Credits_Section_Translation": "Translation",
+  "Credits_DevelopedBy": "Kiara (Youtube, @kygira5_dev)",
+  "Credits_Section_DevelopedBy": "Developed by",
+  "Credits_Testers": "No testers",
+  "Credits_Section_Testers": "Testers"
 }
