Art File + Main Window View Models Language Update

--- a/Resources/Languages/Dutch.json
+++ b/Resources/Languages/Dutch.json
@@ -1,4 +1,5 @@
 {
+  "ProgramName": "Kiara's ASCII Kunst Programma",
   "LanguageName": "Nederlands",
   "FileMenu": "Bestand",
   "NewFile": "Nieuw",
@@ -9,6 +10,7 @@
   "ExportFile": "Exporteer",
   "EditFile": "Bewerk bestand",
   "CopyClipboardArt": "Kopieer kunst naar klembord",
+  "CopyClipboardArt_Message": null,
   "ImportLayer": "Importeer als nieuwe laag",
   "Settings": "Instellingen",
   "Exit": "Afsluiten",
@@ -25,7 +27,7 @@
   "CropCanvas": "Snij canvas bij",
   "CropLayer": "Snij laag bij",
   "FitLayersInCanvas": "Snij alle lagen bij zodat ze in canvas passen",
-  "FitLayersInCanvas_WarningMessage": "Deze actie kan lagen verwijderen.\\nBen je zeker?",
+  "FitLayersInCanvas_WarningMessage": "Deze actie kan lagen verwijderen.\nBen je zeker?",
   "ViewMenu": "Bekijken",
   "DarkMode": "Donker modus",
   "Visible": "Zichtbaar",
@@ -55,10 +57,10 @@
   "Colors": "Kleuren",
   "BackgroundColor": "Achtergrond",
   "TextColor": "Tekst",
-  "InvalidImageExportTextSizeMessage": "Ongeldige tekstgrootte! Textgrootte moet tussen 1 en 256 zijn.",
+  "Error_InvalidImageExportTextSizeMessage": "Ongeldige tekstgrootte! Textgrootte moet tussen 1 en 256 zijn.",
   "ColorPicker": "Kleur Kiezer",
   "HexColor": "Hex",
-  "InvalidHexColorMessage": "Ongeldige hex-kleur!",
+  "Error_InvalidHexColorMessage": "Ongeldige hex-kleur!",
   "InvalidColorMessage": "Ongeldige kleur!",
   "ImageASCIIArtImportOptions": "Foto ASCII Kunst Importeer Opties",
   "InvertBrightness": "Helderheid omkeren",
@@ -72,13 +74,14 @@
   "Settings_OpenAutosavesFolder": "Open autosaves map",
   "Settings_Apply": "Pas veranderingen toe",
   "Settings_Reset": "Alles opnieuw instellen",
-  "Settings_InvalidAutosaveIntervalMessage": "Ongeldige automatische opslag tijd interval! Tijd interval moet langer dan 0 en minder dan 120 minuten zijn. Het mag ook geen decimaal getal zijn.",
+  "Settings_ResetWarningMessage": "Bent u zeker dat u alle instellingen opnieuw wilt instellen?",
+  "Error_Settings_InvalidAutosaveIntervalMessage": "Ongeldige automatische opslag tijd interval! Tijd interval moet langer dan 0 en minder dan 120 minuten zijn. Het mag ook geen decimaal getal zijn.",
   "Palette": "Palet",
   "Name": "Naam",
   "Palette_Characters": "Tekens",
-  "Palette_InvalidCharacterMessage": "Palet bevat ongeldig teken: {0}",
-  "Palette_InvalidNameMessage": "Ongeldige name! Palet naam kan niet leeg of alleen maar  witte ruimte zijn!",
-  "Palette_RemoveMessage": "Ben je zeker dat je palet {0} wilt verwijderen?\\nDit kan niet ongedaan worden.",
+  "Error_Palette_InvalidCharacterMessage": "Palet bevat ongeldig teken: {0}",
+  "Error_Palette_InvalidNameMessage": "Ongeldige name! Palet naam kan niet leeg of alleen maar  witte ruimte zijn!",
+  "Palette_RemoveMessage": "Ben je zeker dat je palet {0} wilt verwijderen?\nDit kan niet ongedaan worden.",
   "Palette_AlreadyExistsMessage": "Palet {0} bestaat al!",
   "Palette_EditPresetPaletteMessage": "Kan niet vooraf ingestelde paletten bewerken.",
   "Palette_RemovePresetPaletteMessage": "Kan niet vooraf ingestelde paletten verwijderen.",
@@ -94,10 +97,15 @@
   "File_SaveFailedMessage": "Kunst bestand bewaren mislukt! Uitzonderingsbericht: {0}",
   "File_SaveBusy": "Aan het bewaren op {0}...",
   "File_SaveSuccessMessage": "Kunst bestand bewaard op {0}!",
-  "File_LargeFileWarningMessage": "De bestand die je probeert te creëeren/bewerken/openen heeft een canvas oppervlakte van {0} tekens. Dit is boven de aanbeloven oppervlakte limiet van {1} tekens.\\nDit bestand kan lang duren om geladen en bewaard te worden, en kan zeer zwaar zijn op prestatie.\\n Ben je zeker dat je wilt verdergaan?",
+  "File_OpenBusy": null,
+  "File_OpenFailedMessage": null,
+  "File_ImportBusy": null,
+  "File_ImportFailedMessage": null,
+  "File_Close": "Sluit bestand af",
+  "File_LargeFileWarningMessage": "De bestand die je probeert te creëeren/bewerken/openen heeft een canvas oppervlakte van {0} tekens. Dit is boven de aanbeloven oppervlakte limiet van {1} tekens.\nDit bestand kan lang duren om geladen en bewaard te worden, en kan zeer zwaar zijn op prestatie.\n Ben je zeker dat je wilt verdergaan?",
   "File_TooLargeMessage": "Canvas oppervlakte is te groot! Max: {0} tekens ({1} tekens)",
-  "File_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen aanwezig in dit bestand.\\nWilt je eerst bewaren?",
-  "Application_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen.\\nBen je zeker dat je wilt afsluiten? (Alle wijzingen worden weggegooid)",
+  "File_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen aanwezig in dit bestand.\nWilt je eerst bewaren?",
+  "Application_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen.\nBen je zeker dat je wilt afsluiten? (Alle wijzingen worden weggegooid)",
   "BackgroundTaskBusyMessage": "Huidige achtergrond taak moet eerst gevoltooid zijn om deze actie uit te voeren.",
   "About": "Over",
   "Credits": "Credits",
@@ -106,5 +114,9 @@
   "Credits_DevelopedBy": "Kiara (Youtube, @kygira5_dev)",
   "Credits_Section_DevelopedBy": "Ontwikkeld door",
   "Credits_Testers": "Geen testers",
-  "Credits_Section_Testers": "Testers"
+  "Credits_Section_Testers": "Testers",
+  "Default_BackgroundLayerName": "Achtergrond",
+  "Error_DefaultInvalidPropertyMessage": "Ongeldig(e) {0}!",
+  "PresetPalette_Alphabet": "Alfabet",
+  "SupportedFiles": null
 }
