--- a/Resources/Languages/English.json
+++ b/Resources/Languages/English.json
@@ -1,4 +1,5 @@
 {
+  "ProgramName": "Kiara's ASCII Art Program",
   "LanguageName": "English",
   "FileMenu": "File",
   "NewFile": "New",
@@ -9,6 +10,7 @@
   "ExportFile": "Export",
   "EditFile": "Edit file",
   "CopyClipboardArt": "Copy art to clipboard",
+  "CopyClipboardArt_Message": "Copied art to clipboard!",
   "ImportLayer": "Import as new layer",
   "Settings": "Settings",
   "Exit": "Exit",
@@ -25,7 +27,7 @@
   "CropCanvas": "Crop canvas",
   "CropLayer": "Crop layer",
   "FitLayersInCanvas": "Crop all layers to fit within canvas",
-  "FitLayersInCanvas_WarningMessage": "This action can remove layers.\\nAre you sure?",
+  "FitLayersInCanvas_WarningMessage": "This action can remove layers.\nAre you sure?",
   "ViewMenu": "View",
   "DarkMode": "Dark mode",
   "Visible": "Visible",
@@ -55,10 +57,10 @@
   "Colors": "Colors",
   "BackgroundColor": "Background",
   "TextColor": "Text",
-  "InvalidImageExportTextSizeMessage": "Invalid text size! Text size must be between 1 and 256.",
+  "Error_InvalidImageExportTextSizeMessage": "Invalid text size! Text size must be between 1 and 256.",
   "ColorPicker": "Color Picker",
   "HexColor": "Hex",
-  "InvalidHexColorMessage": "Invalid hex color!",
+  "Error_InvalidHexColorMessage": "Invalid hex color!",
   "InvalidColorMessage": "Invalid color!",
   "ImageASCIIArtImportOptions": "Image ASCII Art Import Options",
   "InvertBrightness": "Invert brightness",
@@ -72,13 +74,14 @@
   "Settings_OpenAutosavesFolder": "Open autosaves folder",
   "Settings_Apply": "Apply changes",
   "Settings_Reset": "Reset all",
-  "Settings_InvalidAutosaveIntervalMessage": "Invalid autosave interval! Time interval must be larger than 0 and less than 120 minutes and have no decimal points.",
+  "Settings_ResetWarningMessage": "Are you sure you want to reset all settings?",
+  "Error_Settings_InvalidAutosaveIntervalMessage": "Invalid autosave interval! Time interval must be larger than 0 and less than 120 minutes and have no decimal points.",
   "Palette": "Palette",
   "Name": "Name",
   "Palette_Characters": "Characters",
-  "Palette_InvalidCharacterMessage": "Palette contains invalid character: {0}",
-  "Palette_InvalidNameMessage": "Invalid name! Palette name can not be empty or only whitespace!",
-  "Palette_RemoveMessage": "Are you sure you want to remove palette {0}?\\nThis can not be undone.",
+  "Error_Palette_InvalidCharacterMessage": "Palette contains invalid character: {0}",
+  "Error_Palette_InvalidNameMessage": "Invalid name! Palette name can not be empty or only whitespace!",
+  "Palette_RemoveMessage": "Are you sure you want to remove palette {0}?\nThis can not be undone.",
   "Palette_AlreadyExistsMessage": "Palette {0} already exists!",
   "Palette_EditPresetPaletteMessage": "Can not edit preset palettes.",
   "Palette_RemovePresetPaletteMessage": "Can not remove preset palettes.",
@@ -94,10 +97,15 @@
   "File_SaveFailedMessage": "Failed to save art file! Exception message: {0}",
   "File_SaveBusy": "Saving {0}...",
   "File_SaveSuccessMessage": "Saved art file to {0}!",
-  "File_LargeFileWarningMessage": "The file you're trying to create/edit/open has a canvas area of {0} characters. This is above the recommended area limit of {1} characters.\\nThis file might take a long time to load and save, and can be performance heavy.\\nAre you sure you want to continue?",
+  "File_OpenBusy": "Opening {0}...",
+  "File_OpenFailedMessage": "Failed to open art file! Exception message: {0}",
+  "File_ImportBusy": "Importing {0}...",
+  "File_ImportFailedMessage": "Failed to import art file! Exception message: {0}",
+  "File_Close": "Close File",
+  "File_LargeFileWarningMessage": "The file you're trying to create/edit/open has a canvas area of {0} characters. This is above the recommended area limit of {1} characters.\nThis file might take a long time to load and save, and can be performance heavy.\nAre you sure you want to continue?",
   "File_TooLargeMessage": "Canvas area is too large! Max: {0} characters ({1} characters}",
-  "File_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\\nWould you like to save?",
-  "Application_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\\nAre you sure want to exit? (All changes will be discarded)",
+  "File_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\nWould you like to save?",
+  "Application_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\nAre you sure want to exit? (All changes will be discarded)",
   "BackgroundTaskBusyMessage": "Current background task must finish in order to perform this action.",
   "About": "About",
   "Credits": "Credits",
@@ -106,5 +114,9 @@
   "Credits_DevelopedBy": "Kiara (Youtube, @kygira5_dev)",
   "Credits_Section_DevelopedBy": "Developed by",
   "Credits_Testers": "No testers",
-  "Credits_Section_Testers": "Testers"
+  "Credits_Section_Testers": "Testers",
+  "Default_BackgroundLayerName": "Background",
+  "Error_DefaultInvalidPropertyMessage": "Invalid {0}!",
+  "PresetPalette_Alphabet": "Alphabet",
+  "SupportedFiles": "Supported Files"
 }
