Preset Palette Name Language

--- a/Resources/Languages/Dutch.json
+++ b/Resources/Languages/Dutch.json
@@ -27,7 +27,7 @@
   "CropCanvas": "Snij canvas bij",
   "CropLayer": "Snij laag bij",
   "FitLayersInCanvas": "Snij alle lagen bij zodat ze in canvas passen",
-  "FitLayersInCanvas_WarningMessage": "Deze actie kan lagen verwijderen.\nBen je zeker?",
+  "FitLayersInCanvas_WarningMessage": "Deze actie kan lagen verwijderen.\\nBen je zeker?",
   "ViewMenu": "Bekijken",
   "DarkMode": "Donker modus",
   "Visible": "Zichtbaar",
@@ -81,8 +81,15 @@
   "Palette_Characters": "Tekens",
   "Error_Palette_InvalidCharacterMessage": "Palet bevat ongeldig teken: {0}",
   "Error_Palette_InvalidNameMessage": "Ongeldige name! Palet naam kan niet leeg of alleen maar  witte ruimte zijn!",
-  "Palette_RemoveMessage": "Ben je zeker dat je palet {0} wilt verwijderen?\nDit kan niet ongedaan worden.",
-  "Palette_AlreadyExistsMessage": "Palet {0} bestaat al!",
+  "Error_Palette_InvalidFileNameMessage": null,
+  "Palette_CreateBusy": null,
+  "Palette_CreateFailedMessage": null,
+  "Palette_EditBusy": null,
+  "Palette_EditFailedMessage": null,
+  "Palette_RemoveMessage": "Ben je zeker dat je palet {0} wilt verwijderen?\\nDit kan niet ongedaan worden.",
+  "Palette_RemoveBusy": null,
+  "Palette_RemoveFailedMessage": null,
+  "Error_Palette_AlreadyExistsMessage": "Palet {0} bestaat al!",
   "Palette_EditPresetPaletteMessage": "Kan niet vooraf ingestelde paletten bewerken.",
   "Palette_RemovePresetPaletteMessage": "Kan niet vooraf ingestelde paletten verwijderen.",
   "LayerOptions": "Laagopties",
@@ -97,15 +104,15 @@
   "File_SaveFailedMessage": "Kunst bestand bewaren mislukt! Uitzonderingsbericht: {0}",
   "File_SaveBusy": "Aan het bewaren op {0}...",
   "File_SaveSuccessMessage": "Kunst bestand bewaard op {0}!",
-  "File_OpenBusy": null,
-  "File_OpenFailedMessage": null,
-  "File_ImportBusy": null,
-  "File_ImportFailedMessage": null,
+  "File_OpenBusy": "{0} aan het openen…",
+  "File_OpenFailedMessage": "Kunst bestand openen mislukt! Uitzonderingsbericht: {0}",
+  "File_ImportBusy": "{0} aan het importeren…",
+  "File_ImportFailedMessage": "Kunst bestand importeren mislukt! Uitzonderingsbericht: {0}",
   "File_Close": "Sluit bestand af",
-  "File_LargeFileWarningMessage": "De bestand die je probeert te creëeren/bewerken/openen heeft een canvas oppervlakte van {0} tekens. Dit is boven de aanbeloven oppervlakte limiet van {1} tekens.\nDit bestand kan lang duren om geladen en bewaard te worden, en kan zeer zwaar zijn op prestatie.\n Ben je zeker dat je wilt verdergaan?",
+  "File_LargeFileWarningMessage": "De bestand die je probeert te creëeren/bewerken/openen heeft een canvas oppervlakte van {0} tekens. Dit is boven de aanbeloven oppervlakte limiet van {1} tekens.\\nDit bestand kan lang duren om geladen en bewaard te worden, en kan zeer zwaar zijn op prestatie.\\n Ben je zeker dat je wilt verdergaan?",
   "File_TooLargeMessage": "Canvas oppervlakte is te groot! Max: {0} tekens ({1} tekens)",
-  "File_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen aanwezig in dit bestand.\nWilt je eerst bewaren?",
-  "Application_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen.\nBen je zeker dat je wilt afsluiten? (Alle wijzingen worden weggegooid)",
+  "File_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen aanwezig in dit bestand.\\nWilt je eerst bewaren?",
+  "Application_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen.\\nBen je zeker dat je wilt afsluiten? (Alle wijzingen worden weggegooid)",
   "BackgroundTaskBusyMessage": "Huidige achtergrond taak moet eerst gevoltooid zijn om deze actie uit te voeren.",
   "About": "Over",
   "Credits": "Credits",
@@ -115,8 +122,16 @@
   "Credits_Section_DevelopedBy": "Ontwikkeld door",
   "Credits_Testers": "Geen testers",
   "Credits_Section_Testers": "Testers",
-  "Default_BackgroundLayerName": "Achtergrond",
+  "Default_Palettes_New": "Nieuw palet",
+  "Default_Layers_Background": "Achtergrond",
+  "Default_Layers_NewLayer": "Nieuwe laag",
+  "Default_Layers_CloneFormat": "{0} kopie",
   "Error_DefaultInvalidPropertyMessage": "Ongeldig(e) {0}!",
   "PresetPalette_Alphabet": "Alfabet",
-  "SupportedFiles": null
+  "PresetPalette_Main": null,
+  "PresetPalette_Numbers": "Nummers",
+  "PresetPalette_Shapes": "Vormen",
+  "PresetPalette_Braille6": null,
+  "PresetPalette_Braille8": null,
+  "SupportedFiles": "Ondersteunde bestandstypen"
 }
