--- a/Resources/Languages/English.json
+++ b/Resources/Languages/English.json
@@ -27,7 +27,7 @@
   "CropCanvas": "Crop canvas",
   "CropLayer": "Crop layer",
   "FitLayersInCanvas": "Crop all layers to fit within canvas",
-  "FitLayersInCanvas_WarningMessage": "This action can remove layers.\nAre you sure?",
+  "FitLayersInCanvas_WarningMessage": "This action can remove layers.\\nAre you sure?",
   "ViewMenu": "View",
   "DarkMode": "Dark mode",
   "Visible": "Visible",
@@ -81,8 +81,15 @@
   "Palette_Characters": "Characters",
   "Error_Palette_InvalidCharacterMessage": "Palette contains invalid character: {0}",
   "Error_Palette_InvalidNameMessage": "Invalid name! Palette name can not be empty or only whitespace!",
-  "Palette_RemoveMessage": "Are you sure you want to remove palette {0}?\nThis can not be undone.",
-  "Palette_AlreadyExistsMessage": "Palette {0} already exists!",
+  "Error_Palette_InvalidFileNameMessage": "Invalid name! Palette name contains these characters: {0}",
+  "Palette_CreateBusy": "Creating palette {0}...",
+  "Palette_CreateFailedMessage": "Failed to create palette! Exception message: {0}",
+  "Palette_EditBusy": "Editing palette {0}...",
+  "Palette_EditFailedMessage": "Failed to edit palette {0}! Exception message: {1}",
+  "Palette_RemoveMessage": "Are you sure you want to remove palette {0}?\\nThis can not be undone.",
+  "Palette_RemoveBusy": "Removing palette {0}...",
+  "Palette_RemoveFailedMessage": "Failed to remove palette {0}! Exception message: {1}",
+  "Error_Palette_AlreadyExistsMessage": "Palette {0} already exists!",
   "Palette_EditPresetPaletteMessage": "Can not edit preset palettes.",
   "Palette_RemovePresetPaletteMessage": "Can not remove preset palettes.",
   "LayerOptions": "Layer Options",
@@ -102,10 +109,10 @@
   "File_ImportBusy": "Importing {0}...",
   "File_ImportFailedMessage": "Failed to import art file! Exception message: {0}",
   "File_Close": "Close File",
-  "File_LargeFileWarningMessage": "The file you're trying to create/edit/open has a canvas area of {0} characters. This is above the recommended area limit of {1} characters.\nThis file might take a long time to load and save, and can be performance heavy.\nAre you sure you want to continue?",
+  "File_LargeFileWarningMessage": "The file you're trying to create/edit/open has a canvas area of {0} characters. This is above the recommended area limit of {1} characters.\\nThis file might take a long time to load and save, and can be performance heavy.\\nAre you sure you want to continue?",
   "File_TooLargeMessage": "Canvas area is too large! Max: {0} characters ({1} characters}",
-  "File_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\nWould you like to save?",
-  "Application_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\nAre you sure want to exit? (All changes will be discarded)",
+  "File_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\\nWould you like to save?",
+  "Application_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\\nAre you sure want to exit? (All changes will be discarded)",
   "BackgroundTaskBusyMessage": "Current background task must finish in order to perform this action.",
   "About": "About",
   "Credits": "Credits",
@@ -115,8 +122,16 @@
   "Credits_Section_DevelopedBy": "Developed by",
   "Credits_Testers": "No testers",
   "Credits_Section_Testers": "Testers",
-  "Default_BackgroundLayerName": "Background",
+  "Default_Palettes_New": "New palette",
+  "Default_Layers_Background": "Background",
+  "Default_Layers_NewLayer": "New layer",
+  "Default_Layers_CloneFormat": "{0} copy",
   "Error_DefaultInvalidPropertyMessage": "Invalid {0}!",
   "PresetPalette_Alphabet": "Alphabet",
-  "SupportedFiles": "Supported Files"
+  "PresetPalette_Main": "Main ASCII Characters",
+  "PresetPalette_Numbers": "Numbers",
+  "PresetPalette_Shapes": "Shapes",
+  "PresetPalette_Braille6": "6-dot braille",
+  "PresetPalette_Braille8": "8-dot braille",
+  "SupportedFiles": "Supported file types"
 }
