--- a/Resources/Languages/French.json
+++ b/Resources/Languages/French.json
@@ -27,7 +27,7 @@
   "CropCanvas": "Recadrer la toile",
   "CropLayer": "Recadrer la calque",
   "FitLayersInCanvas": "Recadrer toutes les calques pour les adapter à la toile",
-  "FitLayersInCanvas_WarningMessage": "Cette action permet de supprimer des calques.\nÊtes-vous certain?",
+  "FitLayersInCanvas_WarningMessage": "Cette action permet de supprimer des calques.\\nÊtes-vous certain?",
   "ViewMenu": "Regarder",
   "DarkMode": "Mode sombre",
   "Visible": "Visible",
@@ -81,8 +81,15 @@
   "Palette_Characters": null,
   "Error_Palette_InvalidCharacterMessage": null,
   "Error_Palette_InvalidNameMessage": null,
+  "Error_Palette_InvalidFileNameMessage": null,
+  "Palette_CreateBusy": null,
+  "Palette_CreateFailedMessage": null,
+  "Palette_EditBusy": null,
+  "Palette_EditFailedMessage": null,
   "Palette_RemoveMessage": null,
-  "Palette_AlreadyExistsMessage": null,
+  "Palette_RemoveBusy": null,
+  "Palette_RemoveFailedMessage": null,
+  "Error_Palette_AlreadyExistsMessage": null,
   "Palette_EditPresetPaletteMessage": null,
   "Palette_RemovePresetPaletteMessage": null,
   "LayerOptions": null,
@@ -115,8 +122,16 @@
   "Credits_Section_DevelopedBy": "Développé par",
   "Credits_Testers": "Aucun testeur",
   "Credits_Section_Testers": "Testeurs",
-  "Default_BackgroundLayerName": null,
+  "Default_Palettes_New": null,
+  "Default_Layers_Background": null,
+  "Default_Layers_NewLayer": "Nouvelle calque",
+  "Default_Layers_CloneFormat": null,
   "Error_DefaultInvalidPropertyMessage": null,
   "PresetPalette_Alphabet": null,
+  "PresetPalette_Main": null,
+  "PresetPalette_Numbers": null,
+  "PresetPalette_Shapes": null,
+  "PresetPalette_Braille6": null,
+  "PresetPalette_Braille8": null,
   "SupportedFiles": null
 }
