--- a/Resources/Languages/English.json
+++ b/Resources/Languages/English.json
@@ -61,7 +61,7 @@
   "ColorPicker": "Color Picker",
   "HexColor": "Hex",
   "Error_InvalidHexColorMessage": "Invalid hex color!",
-  "InvalidColorMessage": "Invalid color!",
+  "Error_InvalidColorMessage": "Invalid color!",
   "ImageASCIIArtImportOptions": "Image ASCII Art Import Options",
   "InvertBrightness": "Invert brightness",
   "Scale": "Scale",
@@ -112,7 +112,11 @@
   "File_LargeFileWarningMessage": "The file you're trying to create/edit/open has a canvas area of {0} characters. This is above the recommended area limit of {1} characters.\\nThis file might take a long time to load and save, and can be performance heavy.\\nAre you sure you want to continue?",
   "File_TooLargeMessage": "Canvas area is too large! Max: {0} characters ({1} characters}",
   "File_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\\nWould you like to save?",
+  "Error_Application_StartUpErrorMessage": "It seems {0} has run into an unhandled exception, and must close! If this keeps occuring, please inform the creator of {0}!\\nOpen log file?",
   "Application_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\\nAre you sure want to exit? (All changes will be discarded)",
+  "Application_AutoCloseMessage": "Application will automatically close when the current background task has finished after this message.",
+  "Application_CloseBackgroundTaskErrorMessage": "An error occurred while completing background task, exit of application cancelled.\\nException message: {0}",
+  "Application_AlreadyRunningMessage": "There is already an instance of {0} running!",
   "BackgroundTaskBusyMessage": "Current background task must finish in order to perform this action.",
   "About": "About",
   "Credits": "Credits",
@@ -133,5 +137,8 @@
   "PresetPalette_Shapes": "Shapes",
   "PresetPalette_Braille6": "6-dot braille",
   "PresetPalette_Braille8": "8-dot braille",
+  "Autosave": "Autosave",
+  "Error_Autosave_FileSaving": "Autosave for {0} failed! Exception message: {1}",
+  "Error_Autosave_SettingsSaving": "Settings update while autosaving failed! Exception message: {0}",
   "SupportedFiles": "Supported file types"
 }
