Custom Image Import Palettes

--- a/Resources/Languages/Dutch.json
+++ b/Resources/Languages/Dutch.json
@@ -10,7 +10,7 @@
   "ExportFile": "Exporteer",
   "EditFile": "Bewerk bestand",
   "CopyClipboardArt": "Kopieer kunst naar klembord",
-  "CopyClipboardArt_Message": null,
+  "CopyClipboardArt_Message": "Kunst gekopieerd naar klembord",
   "ImportLayer": "Importeer als nieuwe laag",
   "Settings": "Instellingen",
   "Exit": "Afsluiten",
@@ -61,10 +61,12 @@
   "ColorPicker": "Kleur Kiezer",
   "HexColor": "Hex",
   "Error_InvalidHexColorMessage": "Ongeldige hex-kleur!",
-  "InvalidColorMessage": "Ongeldige kleur!",
+  "Error_InvalidColorMessage": "Ongeldige kleur!",
   "ImageASCIIArtImportOptions": "Foto ASCII Kunst Importeer Opties",
   "InvertBrightness": "Helderheid omkeren",
   "Scale": "Schaal",
+  "ImageArtLayerConverter_Characters": "Gebruikte tekens",
+  "ImageArtLayerConverter_Characters_Info": "<= DICHTER  ========  SCHAARSER =>\n(Space is een lege teken)",
   "Settings_Language": "Taal",
   "Settings_UserInterface": "Gebruikersomgeving",
   "Settings_CanvasFont": "Canvas-lettertype",
@@ -80,18 +82,21 @@
   "Name": "Naam",
   "Palette_Characters": "Tekens",
   "Error_Palette_InvalidCharacterMessage": "Palet bevat ongeldig teken: {0}",
-  "Error_Palette_InvalidNameMessage": "Ongeldige name! Palet naam kan niet leeg of alleen maar  witte ruimte zijn!",
-  "Error_Palette_InvalidFileNameMessage": null,
-  "Palette_CreateBusy": null,
-  "Palette_CreateFailedMessage": null,
-  "Palette_EditBusy": null,
-  "Palette_EditFailedMessage": null,
+  "Error_Palette_InvalidNameMessage": "Ongeldige naam! Palet naam kan niet leeg of alleen maar  witte ruimte zijn!",
+  "Error_Palette_InvalidFileNameMessage": "Ongeldige naam! Palet naam bevat deze tekens: {0}",
+  "Palette_CreateBusy": "Palet {0} aan het maken...",
+  "Palette_CreateFailedMessage": "Palet {0} creëren mislukt! Uitzonderingsbericht: {1}",
+  "Palette_EditBusy": "Palet {0} aan het bewerken...",
+  "Palette_EditFailedMessage": "Palet {0} bewerken mislukt! Uitzonderingsbericht: {1}",
   "Palette_RemoveMessage": "Ben je zeker dat je palet {0} wilt verwijderen?\\nDit kan niet ongedaan worden.",
-  "Palette_RemoveBusy": null,
-  "Palette_RemoveFailedMessage": null,
+  "Palette_RemoveBusy": "Palet {0} aan het verwijderen...",
+  "Palette_RemoveFailedMessage": "Palet {0} verwijderen mislukt! Uitzonderingsbericht: {1}",
   "Error_Palette_AlreadyExistsMessage": "Palet {0} bestaat al!",
   "Palette_EditPresetPaletteMessage": "Kan niet vooraf ingestelde paletten bewerken.",
   "Palette_RemovePresetPaletteMessage": "Kan niet vooraf ingestelde paletten verwijderen.",
+  "Palette_New": null,
+  "Palette_Edit": null,
+  "Palette_Remove": null,
   "LayerOptions": "Laagopties",
   "Tool_NoLayerSelectedCaption": "Geen laag geselecteerd",
   "Tool_NoLayerSelectedMessage": "Selecteer eerst een laag!",
@@ -112,7 +117,11 @@
   "File_LargeFileWarningMessage": "De bestand die je probeert te creëeren/bewerken/openen heeft een canvas oppervlakte van {0} tekens. Dit is boven de aanbeloven oppervlakte limiet van {1} tekens.\\nDit bestand kan lang duren om geladen en bewaard te worden, en kan zeer zwaar zijn op prestatie.\\n Ben je zeker dat je wilt verdergaan?",
   "File_TooLargeMessage": "Canvas oppervlakte is te groot! Max: {0} tekens ({1} tekens)",
   "File_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen aanwezig in dit bestand.\\nWilt je eerst bewaren?",
+  "Error_Application_StartUpErrorMessage": null,
   "Application_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen.\\nBen je zeker dat je wilt afsluiten? (Alle wijzingen worden weggegooid)",
+  "Application_AutoCloseMessage": "Programma zal automatisch afsluiten na dat de huidige achtergrond taak voltooid is.",
+  "Application_CloseBackgroundTaskErrorMessage": "Er is een fout gebeurd tijdens het voltooien van de huidige achtergrond taak. Het afsluiten van de programma is stop gezet.\\nUitzondetingsbericht: {0}",
+  "Application_AlreadyRunningMessage": null,
   "BackgroundTaskBusyMessage": "Huidige achtergrond taak moet eerst gevoltooid zijn om deze actie uit te voeren.",
   "About": "Over",
   "Credits": "Credits",
@@ -128,10 +137,20 @@
   "Default_Layers_CloneFormat": "{0} kopie",
   "Error_DefaultInvalidPropertyMessage": "Ongeldig(e) {0}!",
   "PresetPalette_Alphabet": "Alfabet",
-  "PresetPalette_Main": null,
+  "PresetPalette_Main": "Belangrijkste ASCII-tekens",
   "PresetPalette_Numbers": "Nummers",
   "PresetPalette_Shapes": "Vormen",
-  "PresetPalette_Braille6": null,
-  "PresetPalette_Braille8": null,
+  "PresetPalette_Braille6": "6-punts braille",
+  "PresetPalette_Braille8": "8-punts braille",
+  "Autosave": null,
+  "Error_Autosave_FileSaving": null,
+  "Error_Autosave_SettingsSaving": null,
+  "Tool_PencilToolTip": null,
+  "Tool_EraserToolTip": null,
+  "Tool_SelectToolTip": null,
+  "Tool_MoveToolTip": null,
+  "Tool_LineToolTip": null,
+  "Tool_BucketToolTip": null,
+  "Tool_TextToolTip": null,
   "SupportedFiles": "Ondersteunde bestandstypen"
 }
