--- a/Resources/Languages/Spanish.json
+++ b/Resources/Languages/Spanish.json
@@ -61,7 +61,7 @@
   "ColorPicker": null,
   "HexColor": null,
   "Error_InvalidHexColorMessage": null,
-  "InvalidColorMessage": null,
+  "Error_InvalidColorMessage": null,
   "ImageASCIIArtImportOptions": null,
   "InvertBrightness": null,
   "Scale": null,
@@ -92,6 +92,9 @@
   "Error_Palette_AlreadyExistsMessage": null,
   "Palette_EditPresetPaletteMessage": null,
   "Palette_RemovePresetPaletteMessage": null,
+  "Palette_New": null,
+  "Palette_Edit": null,
+  "Palette_Remove": null,
   "LayerOptions": null,
   "Tool_NoLayerSelectedCaption": null,
   "Tool_NoLayerSelectedMessage": null,
@@ -112,7 +115,11 @@
   "File_LargeFileWarningMessage": null,
   "File_TooLargeMessage": null,
   "File_CloseWithoutSavingWarningMessage": null,
+  "Error_Application_StartUpErrorMessage": null,
   "Application_CloseWithoutSavingWarningMessage": null,
+  "Application_AutoCloseMessage": null,
+  "Application_CloseBackgroundTaskErrorMessage": null,
+  "Application_AlreadyRunningMessage": null,
   "BackgroundTaskBusyMessage": null,
   "About": null,
   "Credits": "Créditos",
@@ -133,5 +140,15 @@
   "PresetPalette_Shapes": null,
   "PresetPalette_Braille6": null,
   "PresetPalette_Braille8": null,
+  "Autosave": null,
+  "Error_Autosave_FileSaving": null,
+  "Error_Autosave_SettingsSaving": null,
+  "Tool_PencilToolTip": null,
+  "Tool_EraserToolTip": null,
+  "Tool_SelectToolTip": null,
+  "Tool_MoveToolTip": null,
+  "Tool_LineToolTip": null,
+  "Tool_BucketToolTip": null,
+  "Tool_TextToolTip": null,
   "SupportedFiles": null
 }
