Offset + Size in Layer Options

--- a/Resources/Languages/English.json
+++ b/Resources/Languages/English.json
@@ -43,6 +43,12 @@
   "CanvasResetHighlightThickness": "Reset highlight thickness",
   "CanvasGridVisibility": "Show grid",
   "LayerManagement": "Layer Management",
+  "LayerManagement_Tooltip_AddLayer": "Add layer",
+  "LayerManagement_Tooltip_MoveLayerUp": "Move layer up",
+  "LayerManagement_Tooltip_MoveLayerDown": "Move layer down",
+  "LayerManagement_Tooltip_DuplicateLayer": "Duplicate layer",
+  "LayerManagement_Tooltip_MergeLayerDown": "Merge layer down",
+  "LayerManagement_Tooltip_RemoveLayer": "Remove layer",
   "FiltersMenu": "Filters",
   "NoFilters": "No filters!",
   "DrawMenu": "Draw",
@@ -66,7 +72,8 @@
   "InvertBrightness": "Invert brightness",
   "Scale": "Scale",
   "ImageArtLayerConverter_Characters": "Characters",
-  "ImageArtLayerConverter_Characters_Info": "<= DENSER  =========  SPARSER =>\n(Space is an empty character)",
+  "ImageArtLayerConverter_Characters_Info": "<= DENSER  =========  SPARSER =>\\n(Space is an empty character)",
+  "Error_ImageArtLayerConverter_Characters_Invalid": "Import palette must use atleast 1 character!",
   "Settings_Language": "Language",
   "Settings_UserInterface": "User interface",
   "Settings_CanvasFont": "Canvas font",
@@ -94,10 +101,11 @@
   "Error_Palette_AlreadyExistsMessage": "Palette {0} already exists!",
   "Palette_EditPresetPaletteMessage": "Can not edit preset palettes.",
   "Palette_RemovePresetPaletteMessage": "Can not remove preset palettes.",
-  "Palette_New": "New Palette",
-  "Palette_Edit": "Edit Palette",
-  "Palette_Remove": "Remove Palette",
+  "Palette_New": "New palette",
+  "Palette_Edit": "Edit palette",
+  "Palette_Remove": "Remove palette",
   "LayerOptions": "Layer Options",
+  "LayerOptions_Offset": "Offset",
   "Tool_NoLayerSelectedCaption": "No layer selected",
   "Tool_NoLayerSelectedMessage": "Please select a layer!",
   "Tool_Size": "Size",
