--- a/Resources/Languages/Dutch.json
+++ b/Resources/Languages/Dutch.json
@@ -43,6 +43,12 @@
   "CanvasResetHighlightThickness": "Stel markeer dikte opnieuw in",
   "CanvasGridVisibility": "Toon raster",
   "LayerManagement": "Laagbeheer",
+  "LayerManagement_Tooltip_AddLayer": "Voeg laag toe",
+  "LayerManagement_Tooltip_MoveLayerUp": "Verplaats laag naar boven",
+  "LayerManagement_Tooltip_MoveLayerDown": "Verplaats laag naar beneden",
+  "LayerManagement_Tooltip_DuplicateLayer": "Dupliceer laag",
+  "LayerManagement_Tooltip_MergeLayerDown": "Laag naar beneden samenvoegen",
+  "LayerManagement_Tooltip_RemoveLayer": "Verwijder laag",
   "FiltersMenu": "Filters",
   "NoFilters": "Geen filters!",
   "DrawMenu": "Tekenen",
@@ -66,7 +72,8 @@
   "InvertBrightness": "Helderheid omkeren",
   "Scale": "Schaal",
   "ImageArtLayerConverter_Characters": "Gebruikte tekens",
-  "ImageArtLayerConverter_Characters_Info": "<= DICHTER  ========  SCHAARSER =>\n(Space is een lege teken)",
+  "ImageArtLayerConverter_Characters_Info": "<= DICHTER  ========  SCHAARSER =>\\n(Space is een lege teken)",
+  "Error_ImageArtLayerConverter_Characters_Invalid": "Importeer palet moet minstens één teken gebruiken!",
   "Settings_Language": "Taal",
   "Settings_UserInterface": "Gebruikersomgeving",
   "Settings_CanvasFont": "Canvas-lettertype",
@@ -94,10 +101,11 @@
   "Error_Palette_AlreadyExistsMessage": "Palet {0} bestaat al!",
   "Palette_EditPresetPaletteMessage": "Kan niet vooraf ingestelde paletten bewerken.",
   "Palette_RemovePresetPaletteMessage": "Kan niet vooraf ingestelde paletten verwijderen.",
-  "Palette_New": null,
-  "Palette_Edit": null,
-  "Palette_Remove": null,
+  "Palette_New": "Nieuw palet",
+  "Palette_Edit": "Bewerk palet",
+  "Palette_Remove": "Verwijder palet",
   "LayerOptions": "Laagopties",
+  "LayerOptions_Offset": "Afstand",
   "Tool_NoLayerSelectedCaption": "Geen laag geselecteerd",
   "Tool_NoLayerSelectedMessage": "Selecteer eerst een laag!",
   "Tool_Size": "Grootte",
@@ -120,7 +128,7 @@
   "Error_Application_StartUpErrorMessage": null,
   "Application_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen.\\nBen je zeker dat je wilt afsluiten? (Alle wijzingen worden weggegooid)",
   "Application_AutoCloseMessage": "Programma zal automatisch afsluiten na dat de huidige achtergrond taak voltooid is.",
-  "Application_CloseBackgroundTaskErrorMessage": "Er is een fout gebeurd tijdens het voltooien van de huidige achtergrond taak. Het afsluiten van de programma is stop gezet.\\nUitzondetingsbericht: {0}",
+  "Application_CloseBackgroundTaskErrorMessage": "Er is een fout gebeurd tijdens het voltooien van de huidige achtergrond taak.\\nHet afsluiten van de programma is stop gezet.\\nUitzondetingsbericht: {0}",
   "Application_AlreadyRunningMessage": null,
   "BackgroundTaskBusyMessage": "Huidige achtergrond taak moet eerst gevoltooid zijn om deze actie uit te voeren.",
   "About": "Over",
@@ -145,12 +153,12 @@
   "Autosave": null,
   "Error_Autosave_FileSaving": null,
   "Error_Autosave_SettingsSaving": null,
-  "Tool_PencilToolTip": null,
-  "Tool_EraserToolTip": null,
-  "Tool_SelectToolTip": null,
-  "Tool_MoveToolTip": null,
-  "Tool_LineToolTip": null,
-  "Tool_BucketToolTip": null,
-  "Tool_TextToolTip": null,
+  "Tool_PencilToolTip": "Potlood (Shift + Ctrl + D)",
+  "Tool_EraserToolTip": "Gom (Shift + Ctrl + E)",
+  "Tool_SelectToolTip": "Selecteren (Shift + Ctrl + W)",
+  "Tool_MoveToolTip": "Verplaatsen (Shift + Ctrl + M)",
+  "Tool_LineToolTip": "Lijnen (Shift + Ctrl + L)",
+  "Tool_BucketToolTip": "Emmer (Shift + Ctrl + B)",
+  "Tool_TextToolTip": "Tekst (Shift + Ctrl + T)",
   "SupportedFiles": "Ondersteunde bestandstypen"
 }
